--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
+# ===============================
+# = DATA SOURCE
+# ===============================
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=user
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=test
+spring.datasource.password=test
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
